# kaggle-pandas

./: lesson1.ipynb  lesson2.ipynb  lesson3.ipynb  lesson4.ipynb  lesson5.ipynb  lesson6.ipynb  pyproject.toml
